tests/syntax_errors/test75_2.tl
require "ifj21"
233.3
